; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ohci1394.c_ohci_soft_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_ohci1394.c_ohci_soft_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ti_ohci = type { i32 }

@OHCI1394_HCControlSet = common dso_local global i32 0, align 4
@OHCI1394_HCControl_softReset = common dso_local global i32 0, align 4
@OHCI_LOOP_COUNT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Soft reset finished\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ti_ohci*)* @ohci_soft_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ohci_soft_reset(%struct.ti_ohci* %0) #0 {
  %2 = alloca %struct.ti_ohci*, align 8
  %3 = alloca i32, align 4
  store %struct.ti_ohci* %0, %struct.ti_ohci** %2, align 8
  %4 = load %struct.ti_ohci*, %struct.ti_ohci** %2, align 8
  %5 = load i32, i32* @OHCI1394_HCControlSet, align 4
  %6 = load i32, i32* @OHCI1394_HCControl_softReset, align 4
  %7 = call i32 @reg_write(%struct.ti_ohci* %4, i32 %5, i32 %6)
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %22, %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @OHCI_LOOP_COUNT, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %25

12:                                               ; preds = %8
  %13 = load %struct.ti_ohci*, %struct.ti_ohci** %2, align 8
  %14 = load i32, i32* @OHCI1394_HCControlSet, align 4
  %15 = call i32 @reg_read(%struct.ti_ohci* %13, i32 %14)
  %16 = load i32, i32* @OHCI1394_HCControl_softReset, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %12
  br label %25

20:                                               ; preds = %12
  %21 = call i32 @mdelay(i32 1)
  br label %22

22:                                               ; preds = %20
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 1
  store i32 %24, i32* %3, align 4
  br label %8

25:                                               ; preds = %19, %8
  %26 = call i32 @DBGMSG(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @reg_write(%struct.ti_ohci*, i32, i32) #1

declare dso_local i32 @reg_read(%struct.ti_ohci*, i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @DBGMSG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
